Wireframe controlled by gpencil thickness #47396

Closed
opened 2016-02-11 19:29:59 +01:00 by Mikhail Rachinskiy · 5 comments

System Information
Windows 8.1 x64
Renderer: GeForce GTX 860M/PCIe/SSE2

Blender Version
Broken: 2.76.11 3ab50cf

Short description of error
Wireframe controlled by gpencil thickness with Full Sample enabled, unless there is a “special” object in the scene. Example scene contains: Text, Metaball, Curve and Mesh objects, and one gpencil layer.

  • Solid View:
    • Metabal issue s_1.png
    • But if I add Surface, Lattice, Camera, Lamp, Armature or Empty objects, everything is fine s_2.png
  • Wireframe view:
    • Metabal and Text issue w_1.png
    • If I add Surface, Lattice, Camera, Lamp, Armature or Empty objects, everything is fine w_2.png
  • Bounding Box view:
    • Issue with all objects, including “special” objects that have bounding box draw type, inculing: Surface, Lattice and Armature b_1.png
    • If I add Camera, Lamp or Empty objects that do not have bounding box draw type, everything is fine b_3.png
  • Solid View, with some objects draw type set to bounding box :
    • Every bounding box drawing object have an issue sb_1.png
    • If I add Surface, Lattice, Camera, Lamp, Armature or Empty objects, everything is fine sb_2.png

What's going on guys? Why it's soooo much inconsistent? You hardcoded draw variables for every object/draw type individually or something?

Exact steps for others to reproduce the error

**System Information** Windows 8.1 x64 Renderer: GeForce GTX 860M/PCIe/SSE2 **Blender Version** Broken: 2.76.11 3ab50cf **Short description of error** Wireframe controlled by gpencil thickness with `Full Sample` enabled, unless there is a “special” object in the scene. Example scene contains: `Text`, `Metaball`, `Curve` and `Mesh` objects, and one `gpencil` layer. - Solid View: - `Metabal` issue ![s_1.png](https://archive.blender.org/developer/F282151/s_1.png) - But if I add `Surface`, `Lattice`, `Camera`, `Lamp`, `Armature` or `Empty` objects, everything is fine ![s_2.png](https://archive.blender.org/developer/F282154/s_2.png) - Wireframe view: - `Metabal` and `Text` issue ![w_1.png](https://archive.blender.org/developer/F282157/w_1.png) - If I add `Surface`, `Lattice`, `Camera`, `Lamp`, `Armature` or `Empty` objects, everything is fine ![w_2.png](https://archive.blender.org/developer/F282161/w_2.png) - Bounding Box view: - Issue with all objects, including “special” objects that have bounding box draw type, inculing: `Surface`, `Lattice` and `Armature` ![b_1.png](https://archive.blender.org/developer/F282163/b_1.png) - If I add `Camera`, `Lamp` or `Empty` objects that do not have bounding box draw type, everything is fine ![b_3.png](https://archive.blender.org/developer/F282165/b_3.png) - Solid View, with some objects draw type set to bounding box : - Every bounding box drawing object have an issue ![sb_1.png](https://archive.blender.org/developer/F282168/sb_1.png) - If I add `Surface`, `Lattice`, `Camera`, `Lamp`, `Armature` or `Empty` objects, everything is fine ![sb_2.png](https://archive.blender.org/developer/F282170/sb_2.png) What's going on guys? Why it's soooo much inconsistent? You hardcoded draw variables for every object/draw type individually or something? **Exact steps for others to reproduce the error** - Open blend file [edge_thickness.blend](https://archive.blender.org/developer/F282150/edge_thickness.blend) - Use OpenGL renderer
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Julian Eisel was assigned by Mikhail Rachinskiy 2016-02-11 19:29:59 +01:00
Author
Member

Added subscriber: @MikhailRachinskiy

Added subscriber: @MikhailRachinskiy

This issue was referenced by e8d7a0206e

This issue was referenced by e8d7a0206e994786e2556699d13d54e9517bcbb9
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

This is because OpenGL works context based. You set the line width for drawing and as long as it's not set to a different value it keeps drawing with this line width. If you add a surface, lattice, camera, ... object, the line width is reset to 1 before the metaball, font or whatever is drawn.
Previously the convention was to simply reset the line width after stuff was drawn that needed a thicker line width. To minimize calls for the glLineWidth function blender/blender-staging@e25ba162c0 changed this convention so that we just set the desired line width before drawing without worrying about resetting.

This is because OpenGL works context based. You set the line width for drawing and as long as it's not set to a different value it keeps drawing with this line width. If you add a surface, lattice, camera, ... object, the line width is reset to 1 before the metaball, font or whatever is drawn. Previously the convention was to simply reset the line width after stuff was drawn that needed a thicker line width. To minimize calls for the glLineWidth function blender/blender-staging@e25ba162c0 changed this convention so that we just set the desired line width before drawing without worrying about resetting.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#47396
No description provided.