Fix more cases where gpencil thickness controls line thickness of 3D view elements

We now simple set glLineWidth to 1 once before drawing objects. This way we don't have to do it all over.

Fixes T47396.