source/blender/editors/space_view3d/drawobject.c
@@ -7503,6 +7503,8 @@ void draw_object(Scene *scene, ARegion *ar, View3D *v3d, Base *base, const short
 
 	/* only once set now, will be removed too, should become a global standard */
 	glBlendFunc(GL_SRC_ALPHA, GL_ONE_MINUS_SRC_ALPHA);
+	/* reset here to avoid having to call all over */
+	glLineWidth(1.0f);
 
 	view3d_cached_text_draw_begin();
 	
@@ -7634,7 +7636,6 @@ void draw_object(Scene *scene, ARegion *ar, View3D *v3d, Base *base, const short
 					}
 				}
 				else if (ED_view3d_boundbox_clip(rv3d, ob->bb)) {
-					glLineWidth(1.0f);
 					empty_object = drawDispList(scene, v3d, rv3d, base, dt, dflag, ob_wire_col);
 				}
 				break;
@@ -7707,7 +7708,6 @@ void draw_object(Scene *scene, ARegion *ar, View3D *v3d, Base *base, const short
 						draw_bounding_volume(ob, ob->boundtype);
 					}
 					else {
-						glLineWidth(1.0f);
 						empty_object = draw_armature(scene, v3d, ar, base, dt, dflag, ob_wire_col, false);
 					}
 				}
